# music-league-stats

./: README.md  pyproject.toml
music_league/: round_1.htm  round_10.htm  round_2.htm  round_3.htm  round_4.htm  round_5.htm  round_6.htm  round_7.htm  round_8.htm  round_9.htm
music_league/round_10_files/: script.js
music_league/round_7_files/: main.6396928b.js  style.css
music_league/round_8_files/: script.js
music_league_stats/: scraper.py  spotify_data.py  stats.ipynb
